# macstate

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: release.yml
crates/macstate-cli/: Cargo.toml  schema.json
crates/macstate-cli/src/: main.rs
crates/macstate-core/: Cargo.toml
crates/macstate-core/src/: lib.rs  network.rs  power.rs
crates/macstate-sys/: Cargo.toml
crates/macstate-sys/src/: cf.rs  dispatch.rs  iokit.rs  lib.rs  nwpath.rs  objc.rs
