[package]
name = "macstate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "CLI for macOS system signals (network, power) as JSON"

[[bin]]
name = "macstate"
path = "src/main.rs"

[dependencies]
macstate-core = { path = "../macstate-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
